--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
         "tailwindcss": "^3.1.0"
+    },
+    "dependencies": {
+        "@fullcalendar/core": "^6.1.8",
+        "@fullcalendar/daygrid": "^6.1.8"
     }
 }
